@@ -8,6 +8,9 @@ Version 2.1.9 -
   "close" matches, that is, strings with at most 'n' mismatching
   characters.
 
+- Fixed bug in Keyword.setDefaultKeywordChars(), reported by Kobayashi
+  shinji - nice catch, thanks!
+
 - Minor API change in pyparsing_common. Renamed some of the common
   expressions to PEP8 format (to be consistent with the other 
   pyparsing_common expressions):
@@ -29,6 +32,9 @@ Version 2.1.9 -
   the parse actions in pyparsing_common are still camelCase. It's a 
   small step - when pyparsing 3.0 comes around, everything will change
   to PEP8 snake case.)
+
+- Fixed Python3 compatibility bug when using dict keys() and values()
+  in ParseResults.getName().
 
 
 Version 2.1.8 - 
